gl33-master/src/test/deca/syntax/invalid/others/parentheseEnMoinsPrintlnMethode2.deca
/*
Test sur le manque des parenthèses au début de println dans une fonction

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
  int myFunc(){
    println "Hello");
    return 1;
  }
}


{

}
